--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://xiangming25.github.io
+url: https://xiangming.vip
 date_format: "ordinal"
 title: 此生依然
 subtitle: "工作总结、学习记录"
@@ -39,8 +39,8 @@ navs:
 #     label: 归档
 
   -
-    href: /links/
-    label: 链接
+    href: /open-source/
+    label: 项目
 
   -
     href: /about/
@@ -84,18 +84,12 @@ repository: xiangming25/xiangming25.github.io
 # ---------------- #
 # support provider: disqus, gitment, gitalk
 comments_provider: gitalk
-gitment:
-    owner: xiangming25
-    repo: blog-comments
-    oauth:
-        client_id: 4d0906e83ace5269a1c7
-        client_secret: 5a8642f6672e87c261c0999f1c587a618558465b
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: xiangming25
     repo: blog-comments
-    clientID: 4d0906e83ace5269a1c7
-    clientSecret: 5a8642f6672e87c261c0999f1c587a618558465b
+    clientID: c1095fc8afa022843ec7
+    clientSecret: 29d7f404f4b8694dd17cfb7bde264031267c2c2b
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
