移除无用的文件

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 - sitename: GitHub
-  name: xiangming25
-  url: https://github.com/xiangming25
+  name: lixin
+  url: https://github.com/Lixin1993
 
 - sitename: 简书
   name: 嘴角45度
