--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://xiangming.vip
+url: https://lixin1993.github.io/
 date_format: "ordinal"
 title: 李昕
 subtitle: "工作总结、学习记录"
