--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://lixin1993.github.io/
 date_format: "ordinal"
 title: 李昕
-subtitle: "工作总结、学习记录"
+subtitle: "welcome to lixin's blog"
 description: "李昕的个人博客"
 keywords: lixin
 timezone: Asia/Shanghai
